# docforge

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/.br_history/: issues.20260706_080444_797309544.jsonl  issues.20260706_090351_823249851.jsonl  issues.20260706_092232_766088475.jsonl  issues.20260706_095318_486278383.jsonl  (+2 more)
scripts/: regen-goldens.ts  spike-defuddle.ts  sync-version.mjs
src/: bin.ts  citations.ts  cli.ts  convert.ts  extract.ts  links.ts  log.ts  md-fences.ts  obsidian.ts  output.ts  runPipeline.ts  source.ts  tables.ts  title.ts  walk.ts
tests/: assets-core.test.ts  assets-pass.test.ts  assets-savable.test.ts  assets-store.test.ts  citations.test.ts  cli-auth-header.test.ts  cli-cite-links.test.ts  cli-describe-images.test.ts  cli-format.test.ts  cli-llms-full.test.ts  cli-render.test.ts  cli-save-images.test.ts  cli-scope.test.ts  cli-selector.test.ts  cli.test.ts  compat-keyv.test.ts  convert-tables.test.ts  convert.test.ts  crawl-bfs-fallback.test.ts  crawl-cache-304.test.ts  crawl-e2e.test.ts  crawl-fail-threshold.test.ts  crawl-render-discovery.test.ts  crawl-robots-deny.test.ts  extract.test.ts  fetch-maybe-render.test.ts  http-crawl.test.ts  http-fetch.test.ts  http-robots.test.ts  http-sitemap.test.ts  http-url.test.ts  links.test.ts  llms-txt.test.ts  mcp-convert-format.test.ts  md-fences.test.ts  obsidian.test.ts  openapi-url.test.ts  output.test.ts  pipeline-citations.test.ts  pipeline-obsidian.test.ts  (+28 more)
(+149 files in other folders)
