[project]
name = "docforge"
version = "0.2.0"
description = "Convert documentation HTML to Markdown for RAG ingestion"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "igi21" }]
dependencies = [
    "html-to-markdown>=3.3,<4",
    "beautifulsoup4>=4.13,<5",
    "lxml>=5.0,<6",
    "pyyaml>=6,<7",
]

[project.scripts]
docforge = "docforge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docforge"]
